Moved assets to public folder

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
         <div class="right-info-bar">
             <span class="work-days">
                 <span class="work-days-text">Пн. - Сб. с 9:00 до 19:00</span>
-                <img src="../assets/img/clock.svg">
+                <img src="assets/img/clock.svg">
             </span>
             <span class="geo">
                 <span class="geo-text">or. Chisinau, str. Mesterul Manole 5a</span>
-                <img src="../assets/img/geo.svg">
+                <img src="assets/img/geo.svg">
             </span>
         </div>
 
@@ -33,13 +33,13 @@
             <button class="request_quote">Запросить звонок</button>
             <div class="social-media">
                 <span class="facebook">
-                    <img src="../assets/img/facebook.svg">
+                    <img src="assets/img/facebook.svg">
                 </span>
                 <span class="instagram">
-                    <img src="../assets/img/instagram.svg">
+                    <img src="assets/img/instagram.svg">
                 </span>
                 <span class="youtube">
-                    <img src="../assets/img/youtube.svg">
+                    <img src="assets/img/youtube.svg">
                 </span>
             </div>
             <div class="bottom-logo">
