--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <img src="assets/img/clock.svg">
             </span>
             <span class="geo">
-                <span class="geo-text">or. Chisinau, str. Mesterul Manole 5a</span>
+                <span class="geo-text">or. Chisinau, str. Mesterul Manole 18/2</span>
                 <img src="assets/img/geo.svg">
             </span>
         </div>
