added third block

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,48 @@
             <span>PROTECTION</span>
         </div>
     </div>
+    <div id="third_block">
+        <span class="title" >Место где страсть встречается с <b>Совершенством</b></span>
+        <div class="slider">
+            <div class="row">
+                <div class="slide col-6 col-sm-3 ">
+                    <div class="slide1"></div>
+                    <span class="title-slide">УРОВЕНЬ РАЗВИТИЯ</span>
+                    <div class="text-slide">
+                        Наша ведущая в отрасли студия была специально создана для обеспечения наилучшего результата
+                        во всем, что мы делаем. С нашими хорошо освещенными, климат-контролем и закрытыми рабочими
+                        зонами мы создали идеальные условия для обеспечения безупречной отделки.
+                    </div>
+                </div>
+                <div class="slide col-6 col-sm-3 ">
+                    <div class="slide2"></div>
+                    <span class="title-slide">ПЕРФЕКЦИОНИЗМ</span>
+                    <div class="text-slide">
+                        Мы обеспечиваем престижный сервис, каждый раз обеспечивая 100% удовлетворенность клиентов. Все наши
+                        высококвалифицированные и профессионально подготовленные сотрудники являются
+                        автолюбителями и гордятся тем, что могут предоставить вам достойный уровень проделанной работы.
+                    </div>
+                </div>
+                <div class="slide col-6 col-sm-3">
+                    <div class="slide3"></div>
+                    <span class="title-slide">БЕЗОПАСНО И НАДЕЖНО</span>
+                    <div class="text-slide">
+                        Наша студия оснащена системой безопасности высокого уровня, оснащенной камерами видеонаблюдения
+                        высокой четкости, стратегически расположенными по всему помещению, а также круглосуточным
+                        мониторингом, обеспечивающим безопасность вашего автомобиля, пока вы спите ночью!
+                    </div>
+                </div>
+                <div class="slide col-6 col-sm-3">
+                    <div class="slide4"></div>
+                    <span class="title-slide">НАИВЫСШЕЕ КАЧЕСТВО</span>
+                    <div class="text-slide">
+                        Мы гордимся нашим персонализированным, профессиональным и дружелюбным обслуживанием с момента
+                        вашего обращения к нам до момента, когда вы уезжаете с самой широкой улыбкой на лице.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
