--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet"/>
+    <link href="assets/styles/style.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -14,32 +14,50 @@
     <div class="header">
         <h1 class="logo">RIVALS DETAILING</h1>
         <div class="right-info-bar">
-            <span class="work-days">
-                <span class="work-days-text">Пн. - Сб. с 9:00 до 19:00</span>
-                <img src="assets/img/clock.svg">
-            </span>
             <span class="geo">
                 <span class="geo-text">or. Chisinau, str. Mesterul Manole 18/2</span>
                 <img src="assets/img/geo.svg">
             </span>
+            <span class="work-days">
+                <span class="work-days-text">Пн. - Сб. с 9:00 до 19:00</span>
+                <img src="assets/img/clock.svg">
+            </span>
         </div>
-
+        <div class="menu">
+            <ul class="top">
+                <li class="element">Главная</li>
+                <li class="element">О нас</li>
+                <li class="element">Наши работы</li>
+                <li class="element">Услуги</li>
+                <li class="element">Блог</li>
+                <li class="element">Контакты</li>
+            </ul>
+        </div>
     </div>
 
     <div id="first_block" class="d-flex align-items-center">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2 col-sm-8 offset-sm-2">
             <span class="title" >МАСТЕРА ПО УХОДУ ЗА ТВОИМ АВТОМОБИЛЕМ</span>
             <span class="desc col-md-8 offset-md-2">В RIVALS DETAIL мы предлагаем широкий ассортимент лидирующих на рынке товаров для улучшения и защиты транспортных средств. </span>
             <button class="request_quote">Запросить звонок</button>
             <div class="social-media">
                 <span class="facebook">
-                    <img src="assets/img/facebook.svg">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.26 11.9162V13.7522H12.916V15.9962H14.26V22.6668H17.0227V15.9962H18.876C18.876 15.9962 19.0507 14.9202 19.1347 13.7428H17.0333V12.2095C17.0333 11.9788 17.3347 11.6708 17.6333 11.6708H19.1373V9.3335H17.0907C14.192 9.3335 14.26 11.5802 14.26 11.9162Z" fill="white"/>
+                        <path d="M8.00008 5.33341C7.29284 5.33341 6.61456 5.61437 6.11446 6.11446C5.61437 6.61456 5.33341 7.29284 5.33341 8.00008V24.0001C5.33341 24.7073 5.61437 25.3856 6.11446 25.8857C6.61456 26.3858 7.29284 26.6667 8.00008 26.6667H24.0001C24.7073 26.6667 25.3856 26.3858 25.8857 25.8857C26.3858 25.3856 26.6667 24.7073 26.6667 24.0001V8.00008C26.6667 7.29284 26.3858 6.61456 25.8857 6.11446C25.3856 5.61437 24.7073 5.33341 24.0001 5.33341H8.00008ZM8.00008 2.66675H24.0001C25.4146 2.66675 26.7711 3.22865 27.7713 4.22885C28.7715 5.22904 29.3334 6.58559 29.3334 8.00008V24.0001C29.3334 25.4146 28.7715 26.7711 27.7713 27.7713C26.7711 28.7715 25.4146 29.3334 24.0001 29.3334H8.00008C6.58559 29.3334 5.22904 28.7715 4.22885 27.7713C3.22865 26.7711 2.66675 25.4146 2.66675 24.0001V8.00008C2.66675 6.58559 3.22865 5.22904 4.22885 4.22885C5.22904 3.22865 6.58559 2.66675 8.00008 2.66675Z" fill="white"/>
+                    </svg>
                 </span>
                 <span class="instagram">
-                    <img src="assets/img/instagram.svg">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.0002 9.59072C12.4533 9.59072 9.59078 12.4532 9.59078 16.0001C9.59078 19.547 12.4533 22.4095 16.0002 22.4095C19.547 22.4095 22.4095 19.547 22.4095 16.0001C22.4095 12.4532 19.547 9.59072 16.0002 9.59072ZM16.0002 20.1657C13.7064 20.1657 11.8345 18.2938 11.8345 16.0001C11.8345 13.7063 13.7064 11.8345 16.0002 11.8345C18.2939 11.8345 20.1658 13.7063 20.1658 16.0001C20.1658 18.2938 18.2939 20.1657 16.0002 20.1657ZM22.672 7.83447C21.8439 7.83447 21.1752 8.50322 21.1752 9.33135C21.1752 10.1595 21.8439 10.8282 22.672 10.8282C23.5002 10.8282 24.1689 10.1626 24.1689 9.33135C24.1692 9.13471 24.1306 8.93995 24.0555 8.75823C23.9803 8.57651 23.8701 8.41139 23.731 8.27235C23.592 8.1333 23.4269 8.02305 23.2452 7.94791C23.0634 7.87278 22.8687 7.83423 22.672 7.83447V7.83447ZM28.4939 16.0001C28.4939 14.2751 28.5095 12.5657 28.4127 10.8438C28.3158 8.84385 27.8595 7.06885 26.397 5.60635C24.9314 4.14072 23.1595 3.6876 21.1595 3.59072C19.4345 3.49385 17.7252 3.50947 16.0033 3.50947C14.2783 3.50947 12.5689 3.49385 10.847 3.59072C8.84703 3.6876 7.07203 4.14385 5.60952 5.60635C4.1439 7.07197 3.69077 8.84385 3.5939 10.8438C3.49702 12.5688 3.51265 14.2782 3.51265 16.0001C3.51265 17.722 3.49702 19.4345 3.5939 21.1563C3.69077 23.1563 4.14702 24.9313 5.60952 26.3938C7.07515 27.8595 8.84703 28.3126 10.847 28.4095C12.572 28.5063 14.2814 28.4907 16.0033 28.4907C17.7283 28.4907 19.4377 28.5063 21.1595 28.4095C23.1595 28.3126 24.9345 27.8563 26.397 26.3938C27.8627 24.9282 28.3158 23.1563 28.4127 21.1563C28.5127 19.4345 28.4939 17.7251 28.4939 16.0001V16.0001ZM25.7439 23.3688C25.5158 23.9376 25.2408 24.3626 24.8002 24.8001C24.3595 25.2407 23.9377 25.5157 23.3689 25.7438C21.7252 26.397 17.822 26.2501 16.0002 26.2501C14.1783 26.2501 10.272 26.397 8.62828 25.747C8.05953 25.5188 7.63453 25.2438 7.19703 24.8032C6.7564 24.3626 6.4814 23.9407 6.25328 23.372C5.60328 21.7251 5.75015 17.822 5.75015 16.0001C5.75015 14.1782 5.60328 10.272 6.25328 8.62822C6.4814 8.05947 6.7564 7.63447 7.19703 7.19697C7.63765 6.75947 8.05953 6.48135 8.62828 6.25322C10.272 5.60322 14.1783 5.7501 16.0002 5.7501C17.822 5.7501 21.7283 5.60322 23.372 6.25322C23.9408 6.48135 24.3658 6.75635 24.8033 7.19697C25.2439 7.6376 25.5189 8.05947 25.747 8.62822C26.397 10.272 26.2502 14.1782 26.2502 16.0001C26.2502 17.822 26.397 21.7251 25.7439 23.3688Z" fill="white"/>
+                    </svg>
+
                 </span>
                 <span class="youtube">
-                    <img src="assets/img/youtube.svg">
+                    <svg width="34" height="32" viewBox="0 0 34 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M34 15.8936C34 15.8102 34.0001 15.7153 33.9963 15.6052C33.9925 15.2979 33.9849 14.9526 33.9773 14.5845C33.9469 13.5257 33.8938 12.4708 33.8103 11.4766C33.6965 10.1067 33.5295 8.96451 33.3018 8.10691C33.0616 7.21192 32.5906 6.39568 31.936 5.73976C31.2814 5.08384 30.4661 4.61121 29.5716 4.36912C28.4977 4.08073 26.3955 3.90238 23.4356 3.79233C22.0278 3.7392 20.5213 3.70505 19.0148 3.68608C18.4873 3.67849 17.9978 3.67469 17.5576 3.6709H16.442C16.0018 3.67469 15.5123 3.67849 14.9848 3.68608C13.4783 3.70505 11.9718 3.7392 10.564 3.79233C7.6041 3.90617 5.49804 4.08452 4.42793 4.36912C3.53314 4.61062 2.71754 5.08304 2.06286 5.73906C1.40818 6.39507 0.937411 7.21163 0.697737 8.10691C0.46626 8.96451 0.303088 10.1067 0.189247 11.4766C0.105763 12.4708 0.0526375 13.5257 0.0222799 14.5845C0.0108958 14.9526 0.00710107 15.2979 0.00330636 15.6052C0.00330636 15.7153 -0.000488281 15.8102 -0.000488281 15.8936V16.1061C-0.000488281 16.1896 -0.000488339 16.2845 0.00330636 16.3945C0.00710107 16.7019 0.0146905 17.0472 0.0222799 17.4153C0.0526375 18.474 0.105763 19.529 0.189247 20.5232C0.303088 21.8931 0.470055 23.0353 0.697737 23.8929C1.18346 25.7105 2.61027 27.1449 4.42793 27.6307C5.49804 27.9191 7.6041 28.0974 10.564 28.2074C11.9718 28.2606 13.4783 28.2947 14.9848 28.3137C15.5123 28.3213 16.0018 28.3251 16.442 28.3289H17.5576C17.9978 28.3251 18.4873 28.3213 19.0148 28.3137C20.5213 28.2947 22.0278 28.2606 23.4356 28.2074C26.3955 28.0936 28.5015 27.9153 29.5716 27.6307C31.3893 27.1449 32.8161 25.7143 33.3018 23.8929C33.5333 23.0353 33.6965 21.8931 33.8103 20.5232C33.8938 19.529 33.9469 18.474 33.9773 17.4153C33.9887 17.0472 33.9925 16.7019 33.9963 16.3945C33.9963 16.2845 34 16.1896 34 16.1061V15.8936V15.8936ZM31.2679 16.091C31.2679 16.1707 31.2679 16.2579 31.2641 16.3604C31.2603 16.6564 31.2527 16.9827 31.2451 17.3356C31.2185 18.345 31.1654 19.3544 31.0857 20.2917C30.9833 21.5136 30.8391 22.5154 30.6607 23.1871C30.4254 24.0636 29.7348 24.7581 28.862 24.9895C28.0651 25.202 26.0577 25.3728 23.3293 25.4753C21.9481 25.5284 20.4605 25.5625 18.9768 25.5815C18.4569 25.5891 17.975 25.5929 17.5424 25.5929H16.4571L15.0227 25.5815C13.539 25.5625 12.0553 25.5284 10.6702 25.4753C7.94183 25.369 5.93063 25.202 5.13754 24.9895C4.26476 24.7543 3.57412 24.0636 3.33885 23.1871C3.1605 22.5154 3.0163 21.5136 2.91384 20.2917C2.83415 19.3544 2.78482 18.345 2.75447 17.3356C2.74308 16.9827 2.73929 16.6526 2.73549 16.3604C2.73549 16.2579 2.7317 16.1669 2.7317 16.091V15.9088C2.7317 15.8291 2.7317 15.7418 2.73549 15.6394C2.73929 15.3434 2.74688 15.0171 2.75447 14.6642C2.78103 13.6548 2.83415 12.6454 2.91384 11.7081C3.0163 10.4862 3.1605 9.48438 3.33885 8.81272C3.57412 7.93614 4.26476 7.24171 5.13754 7.01024C5.93443 6.79773 7.94183 6.62697 10.6702 6.52451C12.0515 6.47139 13.539 6.43724 15.0227 6.41826C15.5426 6.41067 16.0245 6.40688 16.4571 6.40688H17.5424L18.9768 6.41826C20.4605 6.43724 21.9443 6.47139 23.3293 6.52451C26.0577 6.63077 28.0689 6.79773 28.862 7.01024C29.7348 7.24551 30.4254 7.93614 30.6607 8.81272C30.8391 9.48438 30.9833 10.4862 31.0857 11.7081C31.1654 12.6454 31.2147 13.6548 31.2451 14.6642C31.2565 15.0171 31.2603 15.3472 31.2641 15.6394C31.2641 15.7418 31.2679 15.8329 31.2679 15.9088V16.091ZM13.6225 21.0848L22.4262 15.9619L13.6225 10.915V21.0848Z" fill="white"/>
+                    </svg>
+
                 </span>
             </div>
             <div class="bottom-logo">
@@ -58,7 +76,7 @@
         <span class="title" >Место где страсть встречается с <b>Совершенством</b></span>
         <div class="slider">
             <div class="row">
-                <div class="slide col-6 col-sm-3 ">
+                <div class="slide col-6 col-xxl-3">
                     <div class="slide1"></div>
                     <span class="title-slide">УРОВЕНЬ РАЗВИТИЯ</span>
                     <div class="text-slide">
@@ -67,7 +85,7 @@
                         зонами мы создали идеальные условия для обеспечения безупречной отделки.
                     </div>
                 </div>
-                <div class="slide col-6 col-sm-3 ">
+                <div class="slide col-6 col-xxl-3">
                     <div class="slide2"></div>
                     <span class="title-slide">ПЕРФЕКЦИОНИЗМ</span>
                     <div class="text-slide">
@@ -76,16 +94,15 @@
                         автолюбителями и гордятся тем, что могут предоставить вам достойный уровень проделанной работы.
                     </div>
                 </div>
-                <div class="slide col-6 col-sm-3">
+                <div class="slide col-6 col-xxl-3">
                     <div class="slide3"></div>
                     <span class="title-slide">БЕЗОПАСНО И НАДЕЖНО</span>
                     <div class="text-slide">
                         Наша студия оснащена системой безопасности высокого уровня, оснащенной камерами видеонаблюдения
-                        высокой четкости, стратегически расположенными по всему помещению, а также круглосуточным
-                        мониторингом, обеспечивающим безопасность вашего автомобиля, пока вы спите ночью!
+                        высокой четкости, стратегически расположенными по всему помещению, обеспечивающим безопасность вашего автомобиля!
                     </div>
                 </div>
-                <div class="slide col-6 col-sm-3">
+                <div class="slide col-6 col-xxl-3">
                     <div class="slide4"></div>
                     <span class="title-slide">НАИВЫСШЕЕ КАЧЕСТВО</span>
                     <div class="text-slide">
@@ -95,6 +112,7 @@
                 </div>
             </div>
         </div>
+        <div class="bg-color"></div>
     </div>
 </div>
 </body>
