--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         <span class="title" >Место где страсть встречается с <b>Совершенством</b></span>
         <div class="slider">
             <div class="row">
-                <div class="slide col-6 col-xxl-3">
+                <div class="slide col-6">
                     <div class="slide1"></div>
                     <span class="title-slide">УРОВЕНЬ РАЗВИТИЯ</span>
                     <div class="text-slide">
@@ -85,7 +85,7 @@
                         зонами мы создали идеальные условия для обеспечения безупречной отделки.
                     </div>
                 </div>
-                <div class="slide col-6 col-xxl-3">
+                <div class="slide col-6">
                     <div class="slide2"></div>
                     <span class="title-slide">ПЕРФЕКЦИОНИЗМ</span>
                     <div class="text-slide">
@@ -94,7 +94,7 @@
                         автолюбителями и гордятся тем, что могут предоставить вам достойный уровень проделанной работы.
                     </div>
                 </div>
-                <div class="slide col-6 col-xxl-3">
+                <div class="slide col-6">
                     <div class="slide3"></div>
                     <span class="title-slide">БЕЗОПАСНО И НАДЕЖНО</span>
                     <div class="text-slide">
@@ -102,7 +102,7 @@
                         высокой четкости, стратегически расположенными по всему помещению, обеспечивающим безопасность вашего автомобиля!
                     </div>
                 </div>
-                <div class="slide col-6 col-xxl-3">
+                <div class="slide col-6">
                     <div class="slide4"></div>
                     <span class="title-slide">НАИВЫСШЕЕ КАЧЕСТВО</span>
                     <div class="text-slide">
